4.完成菜品添加，人员布局。

--- a/catering_system/static/cms/css/menulist.css
+++ b/catering_system/static/cms/css/menulist.css
@@ -1,4 +1,11 @@
 
 .add-menu{
     margin-top: 1em;
+    margin-bottom: 1em;
+}
+.submit-btn{
+        margin-top: 1em;
+}
+th{
+    color: #FFF5EF!important;
 }
