--- a/catering_system/templates/cms/menulist.html
+++ b/catering_system/templates/cms/menulist.html
@@ -4,12 +4,81 @@
 {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ static('cms/css/menulist.css') }}">
+    <script src="{{ static('cms/js/menulist.js') }}"></script>
 {% endblock %}
 {% block main_content %}
-<div class="row">
-<div class="col-md-2">
-    <button class="btn btn-primary btn-block add-menu">+添加菜品</button>
-</div>
-<div class="col-md-10">454</div>
-</div>
+    <div class="row">
+        <div class="col-md-2">
+            <button class="btn btn-primary btn-block add-menu">+添加菜品</button>
+            <div class="add-content">
+                <form id="uploadForm" enctype="multipart/form-data">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">名称</span>
+                        </div>
+                        <input name="menu_name" type="text" class="form-control" placeholder="输入菜品名称" aria-label="name"
+                               aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">权重</span>
+                        </div>
+                        <input name="weighted_value" type="text" class="form-control" placeholder="0-100,数值越大，显示越靠前"
+                               aria-label="Username"
+                               aria-describedby="basic-addon1">
+                    </div>
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroupFileAddon01">图片</span>
+                        </div>
+                        <div class="custom-file">
+                            <input name="pic_file" type="file" class="custom-file-input" id="inputGroupFile01"
+                                   aria-describedby="inputGroupFileAddon01">
+                            <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">描述</span>
+                        </div>
+                        <textarea name="describe_info" class="form-control" aria-label="With textarea"
+                                  rows="5"></textarea>
+                    </div>
+                    <button class="btn btn-warning btn-block submit-btn">提交</button>
+                </form>
+            </div>
+
+        </div>
+        <div class="col-md-10">
+        <table class="table">
+            <thead class="table-dark">
+            <tr>
+                <th>序号</th>
+                <th>图片</th>
+                <th>菜名</th>
+                <th>简介</th>
+                <th>权重</th>
+                <th>编辑</th>
+            </tr>
+            </thead>
+            <tbody class="table-light">
+             {% for menu in menus %}
+                 <tr>
+                 <td>{{ loop.index }}</td>
+                 <td><img style="width: 5em" src="{{ g.qiniu_url }}{{ menu.pic_name }}" alt=""></td>
+                 <td>{{ menu.menu_name }}</td>
+                 <td>{{ menu.describe_info }}</td>
+                 <td>{{ menu.weighted_value }}</td>
+                 <td><i class="bx bx-edit"></i></td>
+                 </tr>
+
+            {% endfor %}
+            </tbody>
+        </table>
+
+
+
+        </div>
+    </div>
 {% endblock %}
