--- a/catering_system/templates/cms/menulist.html
+++ b/catering_system/templates/cms/menulist.html
@@ -59,6 +59,7 @@
                 <th>菜名</th>
                 <th>简介</th>
                 <th>权重</th>
+                <th>二维码</th>
                 <th>编辑</th>
             </tr>
             </thead>
@@ -70,6 +71,7 @@
                  <td>{{ menu.menu_name }}</td>
                  <td>{{ menu.describe_info }}</td>
                  <td>{{ menu.weighted_value }}</td>
+                 <td>待生成</td>
                  <td><i class="bx bx-edit"></i></td>
                  </tr>
 
