6.评分页面布局完成

--- a/catering_system/static/cms/Frest/app-assets/css/core/menu/menu-types/horizontal-menu.css
+++ b/catering_system/static/cms/Frest/app-assets/css/core/menu/menu-types/horizontal-menu.css
@@ -253,14 +253,14 @@
   color: inherit;
 }
 
-.horizontal-menu .navbar-expand-sm .navbar-nav .dropdown .dropdown-toggle:after {
-  content: "\ea4f";
-  font-family: 'boxicons';
-  font-size: 1.2rem;
-  color: #8494a7;
-  display: inline-block;
-  right: 15px;
-}
+/*.horizontal-menu .navbar-expand-sm .navbar-nav .dropdown .dropdown-toggle:after {*/
+/*  content: "\ea4f";*/
+/*  font-family: 'boxicons';*/
+/*  font-size: 1.2rem;*/
+/*  color: #8494a7;*/
+/*  display: inline-block;*/
+/*  right: 15px;*/
+/*}*/
 
 .horizontal-menu.menu-collapsed #main-menu-navigation > li .nav-link {
   padding-top: 0.6rem;
