--- a/catering_system/templates/cms/cms_base.html
+++ b/catering_system/templates/cms/cms_base.html
@@ -301,14 +301,11 @@
                     class="menu-livicon" data-icon="thumbnails-big"></i><span>人员</span></a>
 
             </li>
-            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#"><i
+            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.scoreall') }}"><i
                     class="menu-livicon" data-icon="notebook"></i><span>评分</span></a>
 
             </li>
-            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#"><i
-                    class="menu-livicon" data-icon="pie-chart"></i><span>Charts &amp; Maps</span></a>
 
-            </li>
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#"><i
                     class="menu-livicon" data-icon="morph-folder"></i><span>Others</span></a>
 
