7.准备转window开发，评分/厨师已渲染出来

--- a/catering_system/static/cms/css/score_all.css
+++ b/catering_system/static/cms/css/score_all.css
@@ -65,3 +65,13 @@
     height: 250px;
     border-top: #acacac 1px solid;
 }
+
+.th1{
+    width: 13%;
+}
+.th2{
+    width: 28%;
+}
+.th3{
+    width: 20%;
+}
