--- a/catering_system/templates/cms/score_all.html
+++ b/catering_system/templates/cms/score_all.html
@@ -15,157 +15,30 @@
             <div class="row">
                 <div class="col-md-2 min-data-div">
                     <div>
-                        <div class="chef-div">厨师</div>
+                        <div class="chef-div" id="chef_div">厨师
+                        <div id="user_div"></div>
+                        </div>
                         <div class="echart-div">xiaoli</div>
                         <div class="echart-div">xiaoli</div>
                     </div>
                     <div>
-
                     </div>
                 </div>
                 <div class="col-md-10">
                     <div>菜名</div>
                     <div class="main-score-data table-responsive">
-                       <table class="table table-hover mb-0">
+                       <table class="table table-hover mb-0" id="score_table">
                            <thead>
                            <tr>
-                               <th>序号</th>
-                               <th>色</th>
-                               <th>香</th>
-                               <th>味</th>
-                               <th class="text-bold-700">建议</th>
-                               <th>时间</th>
+                               <th class="th1">序号</th>
+                               <th class="th1">色</th>
+                               <th class="th1">香</th>
+                               <th class="th1">味</th>
+                               <th class="th2">建议</th>
+                               <th class="th3">时间</th>
                            </tr>
                            </thead>
-                           <tbody>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td >2</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td>gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
-                           <tr>
-                               <td>1</td>
-                               <td>5</td>
-                               <td>4</td>
-                               <td>2</td>
-                               <td class="text-bold-500">gdgfdg</td>
-                               <td>ddd</td>
-                           </tr>
+                           <tbody id="tb">
                            </tbody>
                        </table>
                     </div>
