--- a/catering_system/templates/cms/cms_base.html
+++ b/catering_system/templates/cms/cms_base.html
@@ -294,20 +294,20 @@
                     data-i18n="Dashboard">首页</span></a></li>
 
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.menulist') }}"><i
-                    class="menu-livicon" data-icon="briefcase"></i><span>aa</span></a>
+                    class="menu-livicon" data-icon="briefcase"></i><span>菜单管理</span></a>
 
             </li>
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.chef') }}"><i
-                    class="menu-livicon" data-icon="thumbnails-big"></i><span>人员</span></a>
+                    class="menu-livicon" data-icon="thumbnails-big"></i><span>厨师管理</span></a>
 
             </li>
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.scoreall') }}"><i
-                    class="menu-livicon" data-icon="notebook"></i><span>评分</span></a>
+                    class="menu-livicon" data-icon="notebook"></i><span>评分管理</span></a>
 
             </li>
 
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#"><i
-                    class="menu-livicon" data-icon="morph-folder"></i><span>Others</span></a>
+                    class="menu-livicon" data-icon="morph-folder"></i><span>其他</span></a>
 
             </li>
         </ul>
