--- a/catering_system/static/cms/css/menulist.css
+++ b/catering_system/static/cms/css/menulist.css
@@ -1,11 +1,45 @@
 
-.add-menu{
+.add-menu {
     margin-top: 1em;
     margin-bottom: 1em;
 }
-.submit-btn{
-        margin-top: 1em;
+
+.submit-btn {
+    margin-top: 1em;
 }
-th{
-    color: #FFF5EF!important;
+
+th {
+    color: #FFF5EF !important;
+}
+
+.edit-btn:hover {
+    color: #00b3ff;
+    cursor: pointer;
+}
+
+.form-check-inline {
+    margin-top: 10px;
+
+}
+.hid-css{
+    display: none;
+}
+.table-div{
+    /*margin: 2em;*/
+    /*text-align: center;*/
+    border: 1px #d9d9d9 solid;
+    border-radius: 5px;
+    min-height: 100px;
+    max-height: 700px;
+
+    filter: progid:DXImageTransform.Microsoft.Shadow(color=#c2c2c2, direction=120, strength=4);
+
+    -moz-box-shadow: 2px 2px 10px #c2c2c2;
+
+    -webkit-box-shadow: 2px 2px 10px #c2c2c2;
+
+    box-shadow: 2px 2px 10px #c2c2c2;
+}
+.table-div{
+    overflow: auto;
 }
